--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# manifestmyspace-web Git Ignore File
+# Git Ignore File
 
 # For more about ignoring files:
 # See https://help.github.com/articles/ignoring-files/
